--- a/frontend/src/components/vessel/vessel.html
+++ b/frontend/src/components/vessel/vessel.html
@@ -1,4 +1,10 @@
 <!-- Generated template for the VesselComponent component -->
-<div>
-  
+<div class="container">
+  <p>{{vessel.arrival}}</p>
+  <div class="mid-content">
+    <p>{{vessel.vesselName}}</p>
+    <ion-icon name="boat"></ion-icon>
+    <p>ETA {{vessel.eta}}</p>
+  </div>
+  <p>{{vessel.department}}</p>
 </div>
