--- a/frontend/src/components/vessel/vessel.scss
+++ b/frontend/src/components/vessel/vessel.scss
@@ -1,3 +1,19 @@
+@mixin evens() {
+  &:nth-child(even) {
+    @content;
+  }
+}
 vessel {
-
+  .container {
+    padding: 10px;
+    border-bottom: 1px solid rgba(213, 213, 213, 1);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .mid-content {
+    justify-content: center;
+    align-content: center;
+    text-align: center;
+  }
 }
