--- a/frontend/src/app/app.html
+++ b/frontend/src/app/app.html
@@ -1,1 +1,7 @@
-<ion-nav [root]="rootPage"></ion-nav>
+<ion-nav [root]="rootPage">
+    <ul>
+        <li class="text" *ngFor="let item of items | async">
+          {{item.name}}
+        </li>
+      </ul>
+</ion-nav>
