--- a/frontend/src/components/notification/notification.html
+++ b/frontend/src/components/notification/notification.html
@@ -1,9 +1,9 @@
 <!-- Generated template for the NotificationComponent component -->
 <div class="notification">
   <div class="header">
-    <p class="text">
+    <span class="text">
         {{notification.timestamp}} - {{notification.vesselname}}
-    </p>
+    </span>
   </div>
   <p class="text">
     {{notification.description}}
