--- a/frontend/src/pages/port-call/port-call.scss
+++ b/frontend/src/pages/port-call/port-call.scss
@@ -22,4 +22,17 @@ page-port-call {
       }
     }
   }
+
+  .completed {
+    color: green;
+    text-align: center;
+
+    p {
+      font-size: 2.5em;
+    }
+
+    ion-icon {
+      font-size: 3em;
+    }
+  }
 }
