--- a/frontend/src/components/vessel/vessel.html
+++ b/frontend/src/components/vessel/vessel.html
@@ -6,5 +6,5 @@
     <ion-icon name="boat" class="icon"></ion-icon>
     <p class="secundary-text">ETA {{vessel.eta}}</p>
   </div>
-  <p class="bold">{{vessel.department}}</p>
+  <p class="bold">{{vessel.departure}}</p>
 </div>
